--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -8,7 +8,11 @@
             <td><%= f.label :body %></td>
             <td><%= f.text_area :body %></td>
           </tr>
-          <tr><td colspan="2"><%= f.submit %></td></tr>
+          <tr>
+            <td colspan="2">
+              <%= f.submit %>
+            </td>
+          </tr>
         <% end %>
       </table>
     </div>
