--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,7 @@
             <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
             <li><%= link_to 'New note', new_note_path %></li>
             <li><%= link_to 'All users', users_index_path %></li>
+            <li><%= link_to 'All notes', notes_show_all_path %></li>
           <% end %>
         </ul>
       </div>
