--- a/app/views/notes/show_all.html.erb
+++ b/app/views/notes/show_all.html.erb
@@ -15,7 +15,7 @@
           <tr>
             <td><%= link_to note.body, note_path(note) %></td>
             <td><%= note.user.email %></td>
-              <% if note.user != current_user %>
+              <% if note.user == current_user %>
                 <td><%= link_to "edit", edit_note_path(note) %></td>
                 <td><%= link_to "delete", note_path(note), method: :delete, data:{ confirm: "Are you sure?" } %></td>
               <% else %>
