--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -2,15 +2,14 @@
   <div class="row">
     <div class="col-xs-6 col-xs-offset-3">
       <div><h3>Edit Note</h3></div>
-      <table>
+
         <%= form_for @note do |f| %>
-          <tr>
-            <td><%= f.label :body %></td>
-            <td><%= f.text_field :body %></td>
-          </tr>
-          <tr><td colspan="2"><%= f.submit %></td></tr>
+          
+        <%= f.label :body %>
+            <%= f.text_field :body %>
+     <%= f.submit %>
         <% end %>
-      </table>
+
     </div>
   </div>
 </div>
