--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -2,19 +2,16 @@
   <div class="row">
     <div class="col-xs-6 col-xs-offset-3">
       <div><h3>New Note</h3></div>
-      <table>
+
         <%= form_for @note do |f| %>
-          <tr>
-            <td><%= f.label :body %></td>
-            <td><%= f.text_area :body %></td>
-          </tr>
-          <tr>
-            <td colspan="2">
+
+            <%= f.label :body %>
+            <%= f.text_area :body %>
+
               <%= f.submit %>
-            </td>
-          </tr>
+
         <% end %>
-      </table>
+
     </div>
   </div>
 </div>
